--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -69,26 +69,26 @@ h2 { color: #6CE8E0;
 }
 
 .poem {
-  font-family: 'Courgette', cursive;
+  font-family:'Courgette', cursive;
   color:
 }
 
 .poem1 {
-  font-family: 'Courgette', cursive;
+  font-family:'Courgette', cursive;
   color: #7981FF;
   margin: 0;
   padding-bottom: 10px;
 }
 
 .poem3 {
-  font-family: 'Courgette', cursive;
+  font-family:'Courgette', cursive;
   color: #4B0563;
   margin-bottom: 0;
   padding-bottom: 10px;
 }
 
 .poem4 {
-  font-family: 'Courgette', cursive;
+  font-family:'Courgette', cursive;
   color: #11C79D;
 }
 
@@ -111,4 +111,9 @@ h3 {
   background-color: transparent;
   color: pink;
   border: none;
+}
+
+.col-centered{
+    /*float: none;*/
+    margin: 0 auto;
 }
